RESOLVED FIXED242105
[GTK][WPE] REGRESSION(251560@main): createFromPixelBuffer was not updated in GraphicsContextGLTextureMapperANGLE
https://bugs.webkit.org/show_bug.cgi?id=242105
Summary [GTK][WPE] REGRESSION(251560@main): createFromPixelBuffer was not updated in ...
Alejandro G. Castro
Reported 2022-06-29 03:22:44 PDT
The API changed in that commit for the function but it was not changed in the GraphicsContextGLTextureMapperANGLE file, maybe parameters need some review, I'm not sure if I used the proper ones.
Attachments
Alejandro G. Castro
Comment 1 2022-06-29 03:29:11 PDT
EWS
Comment 2 2022-06-29 07:33:55 PDT
Committed 251948@main (730f23345a9d): <https://commits.webkit.org/251948@main> Reviewed commits have been landed. Closing PR #1890 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.