[GTK][WPE] REGRESSION(251560@main): createFromPixelBuffer was not updated in GraphicsContextGLTextureMapperANGLE https://bugs.webkit.org/show_bug.cgi?id=242105

Reviewed by Philippe Normand.

The API for the createFromPixelBuffer function was updated in that
commit but the call in GraphicsContextGLTextureMapperANGLE did not
change. It did not fail for other people because that file is not
currently compiled with the default options but we need it for the
DMABuf fallback mode.

* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:
(WebCore::GraphicsContextGLTextureMapperANGLE::paintCompositedResultsToVideoFrame):

Canonical link: https://commits.webkit.org/251948@main